# Generative-AI

online_mart/: Readme.md  compose.yaml
online_mart/basecode/: Dockerfile.dev
online_mart/basecode/products/: main.py  products_pb2.py
online_mart/basecode/products/consumers/: product_consumer.py
online_mart/order_service/: .env  Dockerfile.dev
online_mart/order_service/kafka_producer/: main.py  message.proto
online_mart/order_service/kafka_producer/depandencies/: depandency.py
online_mart/order_service/kafka_producer/models/: model.py
online_mart/order_service/kafka_producer/producers/: producer.py
online_mart/order_service_database/: .env  Dockerfile.dev
online_mart/order_service_database/kafka_consumers/: main.py  message_pb2.py
online_mart/product_service/: .env  Dockerfile.dev  pyproject.toml
online_mart/product_service/kafka_producer/: main.py  message.proto  message_pb2.py  settings.py
online_mart/product_service/kafka_producer/depandencies/: depandency.py
online_mart/product_service/kafka_producer/routes/: product.py
online_mart/product_service_database/: .env  Dockerfile.dev  pyproject.toml
online_mart/product_service_database/kafka_consumers/: database.py  main.py  settings.py
project-001/: README.md  pyproject.toml
project-001/app/: main.py
project-001/tests/: test_project001.py
project-002/: README.md  pyproject.toml
project-002/app/: main.py
project-003/: pyproject.toml
project-003/todo/: .env  main.py  model.py
project-004/: .env  Dockerfile.dev  pyproject.toml
project-004-frontend/: package-lock.json  package.json
project-004-frontend/src/actions/: actions.ts
project-004-frontend/src/app/: page.tsx
project-004-frontend/src/components/: AddTask.tsx  EditTask.tsx  Modal.tsx  SubmitButton.tsx  Tasks.tsx  TodoTable.tsx  ToolTip.tsx
project-004-frontend/src/lib/: types.d.ts
project-004/daily_todo/: main.py
project-004/tests/: test_main.py
project-005/: .env  Dockerfile.dev  README.md  pyproject.toml
project-005/my_todos/: database.py  main.py
project-006/: Dockerfile.dev  README.md  pyproject.toml
project-006/my_todos_final/: database.py  main.py  models.py
project-007/: compose.yaml
project-007/todosApp/: .env  Dockerfile.dev  README.md  pyproject.toml
project-007/todosApp/mine_todos/: database.py  main.py
project-008/: compose.yaml
project-008-A/: compose.yaml
project-008-A/oauth2-authentication/: Dockerfile  pyproject.toml
project-008/todosApp/: .env  Dockerfile.dev  README.md  pyproject.toml
project-008/todosApp/routine_todos/: database.py  main.py  models.py
project-009/: compose.yaml
project-009/my_daily_todos_app/: .env  Dockerfile.dev  pyproject.toml
project-009/my_daily_todos_app/my_daily_todos/: authentication.py  database.py  main.py  models.py
project-009/my_daily_todos_app/my_daily_todos/router/: user.py
project-010/: compose.yaml
project-010/microservice_01/: pyproject.toml
project-010/microservice_01/my_daily_todos/: database.py  main.py
project-010/microservice_02/: Dockerfile.dev  pyproject.toml
project-010/microservice_02/place_an_order/: main.py
project-011/: compose.yaml  create_topic.sh
project-011/microservice_01/: README.md
project-011/microservice_01/my_daily_todos/: main.py  models.py  settings.py  todos.proto
project-011/microservice_02/: .env  Dockerfile.dev  pyproject.toml
project-011/microservice_02/place_an_order/: main.py  models.py
project-012/: compose.yaml
project-012/read_data_service/: Dockerfile  README.md  pyproject.toml
project-012/read_data_service/read_data/: main.py
project-012/user_data_service/: Dockerfile  pyproject.toml
project-012/user_data_service/user_data/: main.py
project-final/: compose.yaml
project-final/microservice_01/: .env  Dockerfile.dev  README.md  pyproject.toml
project-final/microservice_01/my_daily_todos/: main.py  todos_pb2.py
project-final/microservice_02/: Dockerfile.dev
project-final/microservice_02/place_an_order/: main.py  orders.proto  orders_pb2.py  settings.py
project-final/product_service/: .env  Dockerfile.dev  pyproject.toml
project-final/product_service/products/: database.py  main.py  models.py  products.proto  products_pb2.py  settings.py
(+11 files in other folders)
