[tool.poetry]
name = "app"
version = "0.0.2"
description = "How to set a 'Poetry Project' with 'Python' in Server (Browser) Mode"
authors = ["Syed Muhammad Hussain <hussain.sm014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
