[tool.poetry]
name = "producer"
version = "0.2.0"
description = "Creating an Online Mart"
authors = ["Syed Muhammad Hussain <hussain.sm014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pytest = "^8.1.1"
httpx = "^0.27.0"
aiokafka = "^0.10.0"
protobuf = "^5.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
